vitrail-pg-macros/tests/ui/fail/invalid_default.stderr
error: `@default(autoincrement())` is only supported on `Int` and `BigInt` fields
 --> tests/ui/fail/invalid_default.rs:9:24
  |
9 |         id String @id @default(autoincrement())
  |                        ^^^^^^^
